core-services/InfluxDB/GatewayAPI/03-httproute-influxdb.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: influxdb-ui
  namespace: services
spec:
  parentRefs:
    - kind: Gateway
      name: prod-gw-influxdb
  hostnames:
    - influxdb.prod.cilium.virtualelephant.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: influxdb
          port: 8086
