core-services/InfluxDB/GatewayAPI/04-httproute-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: influxdb-redirect
  namespace: services
spec:
  parentRefs:
    - kind: Gateway
      name: prod-gw-influxdb
  hostnames:
    - influxdb.prod.cilium.virtualelephant.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            port: 443
